sqldeployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sqlnamespace
----  
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
  namespace: sqlnamespace
spec:
  replicas: 1
  selector:
     matchLabels:
       app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      terminationGracePeriodSeconds: 30
      hostname: mssqlinst
      securityContext:
        fsGroup: 10001
      containers:
      - name: mssql
        image: wuaksclusteraks.azurecr.io/mssql/server:2017-latest
        ports:
        - containerPort: 1433
        volumeMounts:
          - name: mssqldb
            mountPath: /var/opt/mssql
          - name: mssqllog
            mountPath: /var/opt/mssqllog
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: mssql-data
      - name: mssqllog
        persistentVolumeClaim:
          claimName: mssql-log
    
---
     
apiVersion: v1
kind: Service
metadata:
  name: mssql-deployment
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer
